--- a/player.html
+++ b/player.html
@@ -1,71 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Live Sports Player</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.5/shaka-player.compiled.js"></script>
+  <title>Shaka Player - Sports</title>
+
+  <!-- Shaka Player -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.compiled.js"></script>
 
   <style>
-    body { margin: 0; background: #000; }
-    #player-container { width: 100%; height: 100vh; display: flex; justify-content: center; align-items: center;}
-    video { width: 100%; height: 100%; background: #000; }
+    body {
+      background: #000;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    #video {
+      width: 100%;
+      height: auto;
+      max-height: 100vh;
+      background: #000;
+      outline: none;
+    }
+    .loader {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #0af;
+      font-size: 18px;
+    }
   </style>
 </head>
-
 <body>
 
-<div id="player-container">
-  <video id="video" controls autoplay></video>
-</div>
+<div class="loader" id="loader">Loading Stream...</div>
 
+<video id="video" autoplay controls playsinline></video>
 
 <script>
-  function getParam(name) {
-    return new URLSearchParams(window.location.search).get(name);
-  }
+document.addEventListener('DOMContentLoaded', async () => {
 
-  async function initPlayer() {
+    const params = new URLSearchParams(window.location.search);
+
+    // Decode MPD URL
+    const encodedUrl = params.get("url");
+    const url = decodeURIComponent(encodedUrl);
+
+    // DRM Keys
+    const k1 = params.get("k1");
+    const k2 = params.get("k2");
+
     const video = document.getElementById('video');
-    const player = new shaka.Player(video);
+    const loader = document.getElementById('loader');
 
-    const streamUrl = getParam('url');
-    const keyId    = getParam('id1');
-    const keyVal   = getParam('id2');
-
-    if (!streamUrl || !keyId || !keyVal) {
-      alert('Missing parameters: url, id1 or id2');
-      return;
+    // Initialize Shaka
+    shaka.polyfill.installAll();
+    if (!shaka.Player.isBrowserSupported()) {
+        alert("Browser Not Supported!");
+        return;
     }
 
-    // ClearKey configuration
+    const player = new shaka.Player(video);
+
+    // Configure ClearKey DRM
     player.configure({
-      drm: {
-        clearKeys: {
-          [keyId]: keyVal
+        drm: {
+            clearKeys: {
+                [k1]: k2
+            }
         }
-      }
     });
 
     try {
-      await player.load(streamUrl);
-      console.log('Playback started ✅');
-    } catch (e) {
-      console.error('Error loading stream:', e);
-      alert('Playback error: ' + e.message);
+        await player.load(url);
+        loader.style.display = "none";
+        console.log("Playing Stream:", url);
+    } catch (error) {
+        loader.style.color = "red";
+        loader.innerText = "Failed to Load Stream!";
+        console.error(error);
     }
-  }
 
-  document.addEventListener('DOMContentLoaded', () => {
-    // polyfill for older browsers
-    shaka.polyfill.installAll();
-    if (shaka.Player.isBrowserSupported()) {
-      initPlayer();
-    } else {
-      alert('Browser not supported by Shaka Player');
-    }
-  });
+});
 </script>
-
 
 </body>
 </html>
