--- a/index.html
+++ b/index.html
@@ -1,42 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sports Channels</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<style>
-body { background:#121212; color:white; font-family: Arial; }
-.channel-card { background:#1d1d1d; border-radius:12px; padding:10px; text-align:center; cursor:pointer; transition:.3s; }
-.channel-card:hover { transform:scale(1.07); background:#272727; }
-.channel-card img { width:100%; border-radius:10px; height:auto; }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Live Channels</title>
+
+  <style>
+    body { background: #111; color: white; font-family: Arial; padding: 15px; }
+    h1 { text-align: center; margin-bottom: 15px; }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 12px;
+    }
+
+    .card {
+      background: #222;
+      border-radius: 8px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: .3s;
+      text-align: center;
+    }
+    .card:hover { transform: scale(1.05); }
+
+    .card img {
+      width: 100%;
+      height: 110px;
+      object-fit: cover;
+    }
+
+    .card p {
+      margin: 8px 0;
+      font-size: 14px;
+    }
+  </style>
 </head>
-<body class="p-4">
+<body>
 
-<h1 class="text-center text-2xl font-bold mb-4 text-cyan-400">⚽ Sports Channels</h1>
-
-<div id="channels" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4"></div>
+<h1>📺 Live Channels</h1>
+<div class="grid" id="channelGrid"></div>
 
 <script>
-async function loadChannels(){
-  const url = "https://raw.githubusercontent.com/cinearena/sports-mpd/main/sports-channels.json"; // Change this
-  const res = await fetch(url);
-  const data = await res.json();
-  const container = document.getElementById("channels");
+async function loadChannels() {
+  const response = await fetch("https://raw.githubusercontent.com/yourusername/yourrepo/main/movies.json");
+  const channels = await response.json();
 
-  data.channels.forEach(c => {
+  const container = document.getElementById("channelGrid");
+  channels.forEach(ch => {
     const div = document.createElement("div");
-    div.className = "channel-card";
+    div.className = "card";
+
     div.innerHTML = `
-      <img src="${c.logo}" alt="${c.name}">
-      <h3 class="mt-2 text-sm font-bold">${c.name}</h3>
+      <img src="${ch.image}">
+      <p>${ch.title}</p>
     `;
+
     div.onclick = () => {
-      window.location.href = `player.html?url=${encodeURIComponent(c.id)}&k1=${c.id1}&k2=${c.id2}`;
+      const playerUrl = `player.html?url=${encodeURIComponent(ch.url)}&keyId=${ch.keyId}&key=${ch.key}`;
+      window.location.href = playerUrl;
     };
+
     container.appendChild(div);
   });
 }
+
 loadChannels();
 </script>
 
