--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     .card {
-      background: #000;
+      background: #fff;
       border-radius: 8px;
       overflow: hidden;
       cursor: pointer;
