--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     .card {
       background: #fff;
+      color: #000;
       border-radius: 8px;
       overflow: hidden;
       cursor: pointer;
